src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__for_in_iter.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse
for v in iter {}
for v in [] {}
for v in do { [] } {}

OK
Root(
    [
        ForIn(
            Ident(
                "v",
            ),
            GetVar(
                Ident(
                    "iter",
                ),
            ),
            [],
        ),
        ForIn(
            Ident(
                "v",
            ),
            List(
                [],
            ),
            [],
        ),
        ForIn(
            Ident(
                "v",
            ),
            Block(
                [
                    StmtExpr(
                        List(
                            [],
                        ),
                    ),
                ],
            ),
            [],
        ),
    ],
)
