src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__for_in_iter_table_bad.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse
for v in {} {}

ERROR
unexpected token "{"
2 |  for v in {} {}
  |           ^
