src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__for_in_range_bad.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse
for i in 0..{} {}
//          ^ unexpected token

ERROR
unexpected token "{"
2 |  for i in 0..{} {}
  |              ^
