src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__for_in_range_exclusive.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse
for i in 0..1 {}

OK
Root(
    [
        ForIn(
            Ident(
                "i",
            ),
            Range(
                Exclusive,
                Int32(
                    0,
                ),
                Int32(
                    1,
                ),
            ),
            [],
        ),
    ],
)
