src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__function.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

fn test() {}

fn test(a, b, c) {}

fn test(a, b, c,) {}


OK
Root(
    [
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
        FuncDecl(
            Ident(
                "test",
            ),
            Block(
                [],
            ),
            [
                Ident(
                    "a",
                ),
                Ident(
                    "b",
                ),
                Ident(
                    "c",
                ),
            ],
        ),
    ],
)
