src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__function_expr.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

let empty = fn() {}
let args = fn(a, b, c) {}
let args_tc = fn(a, b, c, ) {}

OK
Root(
    [
        Var(
            Ident(
                "empty",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [],
            ),
        ),
        Var(
            Ident(
                "args",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
        Var(
            Ident(
                "args_tc",
            ),
            FuncAnon(
                None,
                Block(
                    [],
                ),
                [
                    Ident(
                        "a",
                    ),
                    Ident(
                        "b",
                    ),
                    Ident(
                        "c",
                    ),
                ],
            ),
        ),
    ],
)
