src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__function_missing_name.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

fn () {}

ERROR
expected function name
3 |  fn () {}
  |     ^
