src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import module
import module from "module"
import module from module
import {a,b,c} from module
import {a,b,c} from "module"
import {a as x, b as y, c as z} from "module"

OK
Root(
    [
        ImportBare(
            Str(
                "module",
            ),
            Ident(
                "module",
            ),
        ),
        ImportBare(
            Str(
                "module",
            ),
            Ident(
                "module",
            ),
        ),
        ImportBare(
            Str(
                "module",
            ),
            Ident(
                "module",
            ),
        ),
        Import(
            Str(
                "module",
            ),
            [
                ImportItem(
                    Ident(
                        "a",
                    ),
                    None,
                ),
                ImportItem(
                    Ident(
                        "b",
                    ),
                    None,
                ),
                ImportItem(
                    Ident(
                        "c",
                    ),
                    None,
                ),
            ],
        ),
        Import(
            Str(
                "module",
            ),
            [
                ImportItem(
                    Ident(
                        "a",
                    ),
                    None,
                ),
                ImportItem(
                    Ident(
                        "b",
                    ),
                    None,
                ),
                ImportItem(
                    Ident(
                        "c",
                    ),
                    None,
                ),
            ],
        ),
        Import(
            Str(
                "module",
            ),
            [
                ImportItem(
                    Ident(
                        "a",
                    ),
                    Some(
                        Ident(
                            "x",
                        ),
                    ),
                ),
                ImportItem(
                    Ident(
                        "b",
                    ),
                    Some(
                        Ident(
                            "y",
                        ),
                    ),
                ),
                ImportItem(
                    Ident(
                        "c",
                    ),
                    Some(
                        Ident(
                            "z",
                        ),
                    ),
                ),
            ],
        ),
    ],
)
