src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_bare.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import math from "std/math"
import collections from "std/collections"
import http_module from "http"

OK
Root(
    [
        ImportBare(
            Str(
                "std/math",
            ),
            Ident(
                "math",
            ),
        ),
        ImportBare(
            Str(
                "std/collections",
            ),
            Ident(
                "collections",
            ),
        ),
        ImportBare(
            Str(
                "http",
            ),
            Ident(
                "http_module",
            ),
        ),
    ],
)
