src/parser/snapshots/hebi4__parser__tests__tests__inputs__syntax__import_bare_missing_as.snap
---
source: src/parser/tests.rs
expression: snapshot
---
SOURCE
//parse

import "module" binding

ERROR
expected 'as', found 'binding'
3 |  import "module" binding
  |                  ^^^^^^^
